--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react-router-dom": "^4.2.2"
   }
 }
