--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,8 @@
         "react",
         "jsx-a11y",
         "import"
-    ]
+    ],
+    "rules": {
+      "react/prefer-stateless-function": [0]
+    }
 }
