--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,10 @@
         "import"
     ],
     "rules": {
-      "react/prefer-stateless-function": [0]
+      "react/prefer-stateless-function": [0],
+      "jsx-a11y/anchor-is-valid": [ "error", {
+            "components": [ "Link" ],
+            "specialLink": [ "to" ]
+          }]
     }
 }
