--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^4.5.1",
     "prop-types": "^15.6.1",
     "react-router-dom": "^4.2.2",
     "source-map": "^0.7.3"
