--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "webpack-dev-server --port 3000",
+    "start": "webpack-dev-server --port 3000",
     "build": "webpack",
     "staging": "webpack && rsync -r public/* metro-mayors-housing-task-force@prep.mapc.org:/var/www/metro-mayors-housing-task-force"
   },
