--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "webpack-dev-server --port 3000",
     "build": "webpack",
     "staging": "webpack && rsync -r public/* metro-mayors-housing-task-force@prep.mapc.org:/var/www/metro-mayors-housing-task-force",
-    "production": "webpack && rsync -r public/* metro-mayors-housing-task-force@live.mapc.org:/var/www/metro-mayors-housing-task-force"
+    "production": "NODE_ENV=production webpack && rsync -r public/* metro-mayors-housing-task-force@live.mapc.org:/var/www/metro-mayors-housing-task-force"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "prop-types": "^15.6.1",
+    "react-ga": "^2.5.3",
     "react-router-dom": "^4.2.2",
     "source-map": "^0.7.3"
   }
