--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prop-types": "^15.6.1",
     "react-ga": "^2.5.3",
     "react-router-dom": "^4.2.2",
+    "react-router-hash-link": "^1.2.0",
     "source-map": "^0.7.3"
   }
 }
