--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "production": "NODE_ENV=production webpack && rsync -r public/* metro-mayors-housing-task-force@live.mapc.org:/var/www/metro-mayors-housing-task-force"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-root-import": "^5.1.0",
@@ -29,9 +30,9 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.1",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "4.8.1",
+    "webpack-cli": "2.1.3",
+    "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
