--- a/package.json
+++ b/package.json
@@ -6,39 +6,43 @@
     "production": "NODE_ENV=production webpack && rsync -r public/* metro-mayors-housing-task-force@live.mapc.org:/var/www/metro-mayors-housing-task-force"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.0.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-root-import": "^5.1.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-root-import": "^6.4.1",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "file-loader": "^5.1.0",
+    "immutability-helper": "^3.0.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.9.4",
     "react": "^16.3.2",
-    "react-addons-update": "^15.6.2",
-    "react-dom": "^16.3.2",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "webpack": "4.8.1",
-    "webpack-cli": "2.1.3",
-    "webpack-dev-server": "3.1.4"
+    "react-dom": "^16.3.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "prop-types": "^15.6.1",
-    "react-ga": "^2.5.3",
-    "react-router-dom": "^4.2.2",
-    "react-router-hash-link": "^1.2.0",
+    "@babel/core": "^7.8.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
+    "babel-preset-env": "^1.7.0",
+    "core-js": "^3.6.4",
+    "eslint-plugin-react-hooks": "2.5.0",
+    "prop-types": "^15.6.2",
+    "react-ga": "^2.5.7",
+    "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
+    "regenerator-runtime": "^0.13.3",
     "source-map": "^0.7.3"
   }
 }
