--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "immutability-helper": "^3.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.9.4",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.3",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
@@ -41,7 +41,7 @@
     "eslint-plugin-react-hooks": "2.5.0",
     "prop-types": "^15.6.2",
     "react-ga": "^2.5.7",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "5.3.0",
     "react-router-hash-link": "^1.2.2",
     "regenerator-runtime": "^0.13.3",
     "source-map": "^0.7.3"
