--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node": "12"
+    "node": "20"
   },
   "scripts": {
     "start": "webpack-dev-server --port 3000",
@@ -23,9 +23,9 @@
     "file-loader": "^5.1.0",
     "immutability-helper": "^3.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.9.4",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "sass": "^1.79.4",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
