--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,34 @@
-_site/
+# Sass cache
 .sass-cache/
-.jekyll-metadata
+
+# Build outputs
 assets/bundle.js
-node_modules
 public/bundle.js
 public/bundle.js.map
 public/bundle.css
 public/bundle.css.map
+
+# MacOS cruft
 .DS_Store
-*.sublime-project
-yarn-error.log
+
+# Dependency directories
+node_modules/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
