--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.11.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.30.0",
@@ -23,8 +24,6 @@
     "file-loader": "^6.2.0",
     "immutability-helper": "^3.1.1",
     "mini-css-extract-plugin": "^2.9.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
     "sass": "^1.79.4",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
@@ -39,10 +38,13 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
+    "airtable": "^0.12.2",
     "babel-preset-env": "^1.7.0",
     "core-js": "^3.38.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "prop-types": "^15.8.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-ga": "^3.3.1",
     "react-router-dom": "6.26.2",
     "react-router-hash-link": "^2.4.3",
