--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-ga": "^3.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "6.26.2",
     "react-router-hash-link": "^2.4.3",
     "regenerator-runtime": "^0.14.1",
+    "remark-gfm": "^4.0.0",
     "source-map": "^0.7.4"
   }
 }
