Initial proof-of-concept for use of @mapc/airtable-cms. Still need to update other components

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "type": "module",
   "devDependencies": {
-    "@mapc/eslint-config": "^1.0.2",
+    "@mapc/eslint-config": "^1.0.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.2.1",
     "babel-plugin-root-import": "^6.6.0",
@@ -27,7 +27,7 @@
     "immutability-helper": "^3.1.1",
     "mini-css-extract-plugin": "^2.9.1",
     "prettier": "^3.3.3",
-    "sass": "^1.79.4",
+    "sass": "1.77.6",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
     "url-loader": "^4.1.1",
@@ -41,12 +41,15 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
+    "@mapc/airtable-cms": "^1.0.0",
     "airtable": "^0.12.2",
     "babel-preset-env": "^1.7.0",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.38.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "18.3.1",
     "react-ga": "^3.3.1",
     "react-markdown": "^9.0.1",
